--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,14 +63,14 @@ html {
   color: #FFF;
   text-align: center;
   font-family: "lato", sans-serif;
-  font-weight: 300;
-  font-size: 50px;
+  font-weight: 900;
+  font-size: 55px;
   letter-spacing: 10px;
   margin-top: -60px;
   padding-left: 10px;
 }
 #title span {
-  background: -webkit-linear-gradient(white, #38495a);
+  background: -webkit-linear-gradient(#2ecc71, #38495a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
