--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,15 @@
+@import url(http://fonts.googleapis.com/css?family=Orbitron);
+
 html {
   height: 100%;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  background: radial-gradient(ellipse at bottom, #121b24 0%, #090a0f 100%);
   overflow: hidden;
+}
+body {
+  font-family: 'Orbitron', courier, sans-serif;
+}
+::-webkit-scrollbar {
+    display: none;
 }
 
 #stars {
@@ -57,22 +65,102 @@ html {
 
 #title {
   position: absolute;
-  top: 50%;
+  /*top: 50%;*/
+  padding-top: 30%;
   left: 0;
   right: 0;
   color: #FFF;
   text-align: center;
-  font-family: "lato", sans-serif;
+  font-family: 'Orbitron', courier, sans-serif;
+  /*font-family: "lato", sans-serif;*/
   font-weight: 900;
-  font-size: 55px;
-  letter-spacing: 10px;
-  margin-top: -60px;
-  padding-left: 10px;
+  font-size: 10vw;
+  letter-spacing: 1vw;
+  /*margin-top: -60px;*/
+  /*padding-left: 10px;*/
 }
 #title span {
-  background: -webkit-linear-gradient(#2ecc71, #38495a);
+  color: #00ff00;
+  /*background: -webkit-radial-gradient(center, 8em 15px, #2ecc71, #505151);*/
+  /*text-shadow: 1px 1px 5px #999999;*/
+  /*-webkit-background-clip: text;*/
+  -webkit-text-fill-color: transparent;
+}
+
+#title h6 {
+  color: #777777;
+  font-weight: 200;
+  letter-spacing: 0vw;
+  font-size: 4vw;
+  /*-webkit-text-fill-color: transparent;*/
+}
+
+.glow {
+  text-align: center;
+  color: rgba(255, 255, 255, 0.3);
+  text-shadow: 0 0 1px rgba(157, 208, 154, 0.3);
+  background: -webkit-linear-gradient(transparent, transparent), url(http://i.imgur.com/WyMyxQ6.png) repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  /* Animation */
+  -webkit-animation: glow 3s infinite alternate;
+  -moz-animation: glow 3s infinite alternate;
+  animation: glow 3s infinite alternate;
+  -webkit-animation-timing-function: cubic-bezier(1, 0.3, 0.79, 0.81);
+  -moz-animation-timing-function: cubic-bezier(1, 0.3, 0.79, 0.81);
+  animation-timing-function: cubic-bezier(1, 0.3, 0.79, 0.81);
+}
+
+@-webkit-keyframes glow {
+  0% {
+    text-shadow: 0 0 1px rgba(255, 255, 255, 0.1), 0 0 3px rgba(255, 255, 255, 0.1), 0 0 5px rgba(157, 208, 154, 0.3);
+  }
+  50% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1);
+  }
+  52% {
+    text-shadow: 0 0 5px rgba(157, 208, 154, 0.3);
+  }
+  54% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1), 0 0 10px rgba(157, 208, 154, 0.3);
+  }
+}
+@-moz-keyframes glow {
+  0% {
+    text-shadow: 0 0 1px rgba(255, 255, 255, 0.1), 0 0 3px rgba(255, 255, 255, 0.1), 0 0 5px rgba(157, 208, 154, 0.3);
+  }
+  50% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1);
+  }
+  52% {
+    text-shadow: 0 0 5px rgba(157, 208, 154, 0.3);
+  }
+  54% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1), 0 0 10px rgba(157, 208, 154, 0.3);
+  }
+}
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 1px rgba(255, 255, 255, 0.1), 0 0 3px rgba(255, 255, 255, 0.1), 0 0 5px rgba(157, 208, 154, 0.3);
+  }
+  50% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1);
+  }
+  52% {
+    text-shadow: 0 0 5px rgba(157, 208, 154, 0.3);
+  }
+  54% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.1), 0 0 10px rgba(157, 208, 154, 0.3);
+  }
 }
 
 @keyframes animStar {
@@ -85,3 +173,4 @@ html {
 }
 
 /* Credit to Saransh Sinha for writing the paralax star background https://codepen.io/saransh/pen/BKJun */
+/* Credit to  Brav0 for writing the glow effect  https://codepen.io/brav0/pen/Hesnf */
