--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Orbitron);
 
 html {
-  height: 100%;
-  background: radial-gradient(ellipse at bottom, #121b24 0%, #090a0f 100%);
-  overflow: hidden;
+  /*height: 100%;*/
+  background: radial-gradient(ellipse at bottom, #000000 0%, #030f04 100%);
+  /*overflow: hidden;*/
 }
 body {
   font-family: 'Orbitron', courier, sans-serif;
@@ -11,6 +11,18 @@ body {
 ::-webkit-scrollbar {
     display: none;
 }
+
+a {
+  text-decoration: none;
+}
+
+/*.scroll-container {*/
+  /*width: 100%;*/
+  /*height: 99%;*/
+  /*overflow: auto;*/
+  /*background: rgba( 0, 0, 0, 0.0);*/
+/*}*/
+
 
 #stars {
   width: 1px;
@@ -65,8 +77,8 @@ body {
 
 #title {
   position: absolute;
-  /*top: 50%;*/
-  padding-top: 30%;
+  top: 9%;
+  padding-top: 5%;
   left: 0;
   right: 0;
   color: #FFF;
@@ -110,6 +122,36 @@ body {
   -moz-animation-timing-function: cubic-bezier(1, 0.3, 0.79, 0.81);
   animation-timing-function: cubic-bezier(1, 0.3, 0.79, 0.81);
 }
+
+/* Top Nav Bar */
+/* Remove margins and padding from the list, and add a black background color */
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Float the list items side by side */
+ul.topnav li {float: left;}
+
+/* Style the links inside the list items */
+ul.topnav li a {
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 3vw;
+}
+
+/* Change background color of links on hover */
+ul.topnav li a:hover {background-color: #555;}
+
+/* Hide the list item that contains the link that should open and close the topnav on small screens */
+ul.topnav li.icon {display: none;}
 
 @-webkit-keyframes glow {
   0% {
