--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,17 +124,38 @@ div#content {
   color: #eee;
 }
 
+#content span{
+  font-weight: bolder;
+  font-style: oblique;
+  color: #ada;
+}
+
 #content p {
   color:#aaa;
   text-align: left;
   font-size: 1.5vw;
   line-height: 3vw;
+}
+
+#content li {
+  text-align: left;
+  margin: 2vw 0;
+}
+
+#content p.para {
   padding-bottom: 5vw;
+}
+
+img.character-sprite {
+  height: 7vw;
+  width: 7vw;
+  display: block;
 }
 
 img.bio-image {
   height: 13vw;
   width: 13vw;
+  display: block;
 }
 
 .glow {
