--- a/stylesheet.css
+++ b/stylesheet.css
@@ -137,7 +137,7 @@ div#content {
 
 #content p {
   color:#fff;
-  text-align: justify;
+  text-align: left;
   line-height: 3vw;
   letter-spacing: 0.3vw;
   font-size: 1.5vw;
